--- a/contact.html
+++ b/contact.html
@@ -143,8 +143,8 @@
           </div>
 
           <div class="col-lg-7">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up"
-              data-aos-delay="200">
+            <form action="https://api.web3forms.com/submit" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+  <input type="hidden" name="access_key" value="86543a53-5ab7-4d0f-aae6-fd7984d4d5f1">
               <div class="row gy-4">
 
                 <div class="col-md-6">
