--- a/contact.html
+++ b/contact.html
@@ -144,7 +144,8 @@
 
           <div class="col-lg-7">
             <form action="https://api.web3forms.com/submit" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-  <input type="hidden" name="access_key" value="86543a53-5ab7-4d0f-aae6-fd7984d4d5f1">
+              <input type="hidden" name="access_key" value="86543a53-5ab7-4d0f-aae6-fd7984d4d5f1">
+              <input type="hidden" name="redirect" value="https://navprit-portfolio.netlify.app/contact.html?success=true">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -221,7 +222,7 @@
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
