--- a/contact.html
+++ b/contact.html
@@ -143,6 +143,9 @@
           </div>
 
           <div class="col-lg-7">
+            <div id="success-message" style="display:none; background:#d4edda; color:#155724; padding:15px; border-radius:5px; margin-bottom:20px;">
+  ✅ Your message has been sent successfully!
+</div>
             <form action="https://api.web3forms.com/submit" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <input type="hidden" name="access_key" value="86543a53-5ab7-4d0f-aae6-fd7984d4d5f1">
               <input type="hidden" name="redirect" value="https://navprit-portfolio.netlify.app/contact.html?success=true">
