--- a/about.html
+++ b/about.html
@@ -115,18 +115,25 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Github:</strong>
                     <span>https://github.com/1999nitu</span>
                   </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 8684948532</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ambala, Haryana</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+61 435407031</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>VIC, Melbourne</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>26</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelors of Computer Applications</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Current:</strong> <span>Masters of Information Technology</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Campus:</strong> <span>Central Queensland University</span></li>
+                  
+                  
+                  <li><i class="bi bi-chevron-right"></i> <strong>Office Email:</strong>
                     <span>navprit.xportsoft@gmail.com</span>
                   </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Employee At:</strong> <span>xportsoft technologies
+                  <li><i class="bi bi-chevron-right"></i> <strong> Email:</strong>
+                    <span>kaurnavprit5@gmail.com</span>
+                  </li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Employed:</strong> <span>Xportsoft Technologies
                       pvt. Ltd</span></li>
                 </ul>
               </div>
@@ -220,6 +227,22 @@
               <span class="skill"><span>Node</span> <i class="val">55%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div><!-- End Skills Item -->
+
+             <div class="progress">
+              <span class="skill"><span>PHP</span> <i class="val">57%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="57" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div><!-- End Skills Item -->
+
+             <div class="progress">
+              <span class="skill"><span>Python</span> <i class="val">40%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div><!-- End Skills Item -->
