--- a/about.html
+++ b/about.html
@@ -102,7 +102,8 @@
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
             <!-- <img src="assets/img/profile-img.jpg" class="img-fluid" alt=""> -->
-            <img src="assets/img/Navprit.jpeg" class="img-fluid" alt="">
+            <!-- <img src="assets/img/Navprit.jpeg" class="img-fluid" alt=""> -->
+            <img src="assets/img/Navprit.jpeg" class="img-fluid" alt="" style="width:300px;">
             
           </div>
           <div class="col-lg-8 content">
