--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
           <div class="col-lg-4">
             <!-- <img src="assets/img/profile-img.jpg" class="img-fluid" alt=""> -->
             <!-- <img src="assets/img/Navprit.jpeg" class="img-fluid" alt=""> -->
-            <img src="assets/img/Navprit.jpeg" class="img-fluid" alt="" style="width:300px;">
+            <img src="assets/img/Navprit.jpeg" class="img-fluid" alt="" style="width:300px; "height:200px";>
             
           </div>
           <div class="col-lg-8 content">
