--- a/about.html
+++ b/about.html
@@ -101,9 +101,9 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <!-- <img src="assets/img/profile-img.jpg" class="img-fluid" alt=""> -->
+            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
             <!-- <img src="assets/img/Navprit.jpeg" class="img-fluid" alt=""> -->
-            <img src="assets/img/Navprit.jpeg" class="img-fluid" alt="" style="width:300px; "height:200px";>
+            <!-- <img src="assets/img/Navprit.jpeg" class="img-fluid" alt="" style="width:300px;> -->
             
           </div>
           <div class="col-lg-8 content">
