--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-8">
             <h2>Navprit Kaur</h2>
-            <p>I'm a full stack developer from Ambala Haryana</p>
+            <p>I'm a full stack developer from Melbourne</p>
             <a href="about.html" class="btn-get-started">About Me</a>
           </div>
         </div>
