--- a/resume.html
+++ b/resume.html
@@ -108,8 +108,8 @@
                   maintaining responsive websites and applications. Skilled in front-end and back-end technologies, with
                   a focus on delivering user-friendly and SEO-optimized digital solutions.</em></p>
               <ul>
-                <li>Ambala, Haryana</li>
-                <li>+91 8684948532</li>
+                <li>VIC, Melbourne</li>
+                <li>+61 435407031</li>
                 <li>kaurnavprit5@gmail.com</li>
               </ul>
             </div>
