--- a/services.html
+++ b/services.html
@@ -179,7 +179,7 @@
                 </svg>
                 <i class="bi bi-brush"></i>
               </div>
-              <a href="https://xportsoft.com/services#ui-ux-design" class="stretched-link">
+              <a href="https://glennitu.netlify.app/" class="stretched-link">
                 <h3>UI/UX Design</h3>
               </a>
               <p>Designing intuitive and visually appealing user interfaces that enhance usability and customer
