--- a/services.html
+++ b/services.html
@@ -184,7 +184,7 @@
               </a>
               <p>Designing intuitive and visually appealing user interfaces that enhance usability and customer
                 engagement.</p>
-              <a href="#" class="stretched-link"></a>
+              <a href="https://glennitu.netlify.app/" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
