--- a/services.html
+++ b/services.html
@@ -198,12 +198,12 @@
                 </svg>
                 <i class="bi bi-wrench-adjustable-circle"></i>
               </div>
-              <a href="https://xportsoft.com/web-design-development-services/" class="stretched-link">
+              <a href="https://transportation-carries-flight.netlify.app/" class="stretched-link">
                 <h3>Website Maintenance</h3>
               </a>
               <p>Ongoing support, updates, backups, and troubleshooting to keep your website secure and running
                 smoothly.</p>
-              <a href="#" class="stretched-link"></a>
+              <a href="https://transportation-carries-flight.netlify.app/" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
