--- a/services.html
+++ b/services.html
@@ -217,11 +217,11 @@
                 </svg>
                 <i class="bi bi-bar-chart-line"></i>
               </div>
-              <a href="https://xportsoft.com/seo-services/" class="stretched-link">
+              <a href="https://bitcoin-currency.netlify.app/" class="stretched-link">
                 <h3>SEO &amp; Performance</h3>
               </a>
               <p>Improving website speed, structure, and content to boost Google rankings and user engagement.</p>
-              <a href="#" class="stretched-link"></a>
+              <a href="https://bitcoin-currency.netlify.app/" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
