--- a/portfolio.html
+++ b/portfolio.html
@@ -175,7 +175,7 @@
               <img src="assets/img/masonry-portfolio/ecomm-daddy.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Ecomm Daddy</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p> site </p>
                 <a href="assets/img/masonry-portfolio/ecomm-daddy.jpg" title="Branding 1"
                   data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i
                     class="bi bi-zoom-in"></i></a>
@@ -188,13 +188,15 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/calculator.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>Lorem ipsum, dolor sit</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-4.jpg" title="App 2"
+                <h4>Calculator</h4>
+                <p>Calculator</p>
+                <a href="assets/img/calculator.webp" title="App 2"
                   data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                    class="bi bi-link-45deg"></i></a>
+                <a href="https://calculatornavprit.netlify.app/" title="More Details" class="details-link"><i
                     class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
