--- a/portfolio.html
+++ b/portfolio.html
@@ -191,7 +191,7 @@
               <img src="assets/img/calculator.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Calculator</h4>
-                <p>Calculator</p>
+                <p>Functionality</p>
                 <a href="assets/img/calculator.webp" title="App 2"
                   data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i
@@ -202,11 +202,11 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-5.jpg" class="img-fluid" alt="">
+              <img src="assets/img/calculator.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Product 2</h4>
-                <p>Lorem ipsum, dolor sit</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-5.jpg" title="Product 2"
+                <h4>Calculator</h4>
+                <p>Functionality</p>
+                <a href="https://calculatornavprit.netlify.app/" title="Product 2"
                   data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i
                     class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i
