--- a/portfolio.html
+++ b/portfolio.html
@@ -196,8 +196,10 @@
                   data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i
                     class="bi bi-link-45deg"></i></a>
-                <a href="https://calculatornavprit.netlify.app/" title="More Details" class="details-link"><i
-                    class="bi bi-link-45deg"></i></a>
+                
+                    <a href="https://calculatornavprit.netlify.app/" target="_blank" title="Live Project" class="live-link">
+                  <i class="bi bi-box-arrow-up-right"></i> Live Project
+                </a>
               </div>
             </div><!-- End Portfolio Item -->
 
